--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
   <link href="css/maximenuckmobile.css" rel="stylesheet">
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/temp.css" rel="stylesheet">
@@ -451,7 +452,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/1.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/1.jpg" alt="img">
                   <div class="im_zoom" style="position: absolute; display: none;"></div>
                 </a>
@@ -462,7 +463,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/2.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/2.jpg" alt="img">
                   <div class="im_zoom" style="position: absolute;"></div>
                 </a>
@@ -473,7 +474,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/3.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/3.jpg"
                     alt="Нажмите для увеличения изображения 3.jpg">
 
@@ -486,7 +487,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/4.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/4.jpg"
                     alt="Нажмите для увеличения изображения 4.jpg">
 
@@ -499,7 +500,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/5.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/5.jpg"
                     alt="Нажмите для увеличения изображения 5.jpg">
 
@@ -512,7 +513,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/6.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/6.jpg"
                     alt="Нажмите для увеличения изображения 6.jpg">
 
@@ -525,7 +526,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/7.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/7.jpg"
                     alt="Нажмите для увеличения изображения 7.jpg">
 
@@ -538,7 +539,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/8.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/8.jpg"
                     alt="Нажмите для увеличения изображения 8.jpg">
 
@@ -551,7 +552,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/9.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/9.jpg"
                     alt="Нажмите для увеличения изображения 9.jpg">
 
@@ -564,7 +565,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/10.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/10.jpg"
                     alt="Нажмите для увеличения изображения 10.jpg">
 
@@ -577,7 +578,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/11.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/11.jpg"
                     alt="Нажмите для увеличения изображения 11.jpg">
 
@@ -590,7 +591,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/12.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/12.jpg"
                     alt="Нажмите для увеличения изображения 12.jpg">
 
@@ -603,7 +604,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/13.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/13.jpg"
                     alt="Нажмите для увеличения изображения 13.jpg">
 
@@ -616,7 +617,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/14.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/14.jpg"
                     alt="Нажмите для увеличения изображения 14.jpg">
 
@@ -629,7 +630,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/16.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/16.jpg"
                     alt="Нажмите для увеличения изображения 16.jpg">
 
@@ -642,7 +643,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/17.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/17.jpg"
                     alt="Нажмите для увеличения изображения 17.jpg">
 
@@ -655,7 +656,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/18.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/18.jpg"
                     alt="Нажмите для увеличения изображения 18.jpg">
 
@@ -668,7 +669,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/19.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/19.jpg"
                     alt="Нажмите для увеличения изображения 19.jpg">
 
@@ -681,7 +682,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/20.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/20.jpg"
                     alt="Нажмите для увеличения изображения 20.jpg">
 
@@ -694,7 +695,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/21.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/21.jpg"
                     alt="Нажмите для увеличения изображения 21.jpg">
 
@@ -707,7 +708,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/potolok/22.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/potolok/22.jpg"
                     alt="Нажмите для увеличения изображения 22.jpg"">
 
@@ -721,7 +722,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/23.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/23.jpg"
                 alt="Нажмите для увеличения изображения 23.jpg">
 
@@ -734,7 +735,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/24.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/24.jpg"
                 alt="Нажмите для увеличения изображения 24.jpg">
 
@@ -747,7 +748,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/25.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/25.jpg"
                 alt="Нажмите для увеличения изображения 25.jpg">
 
@@ -760,7 +761,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/26.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/26.jpg"
                 alt="Нажмите для увеличения изображения 26.jpg">
 
@@ -773,7 +774,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/27.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/27.jpg"
                 alt="Нажмите для увеличения изображения 27.jpg">
 
@@ -786,7 +787,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/28.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/28.jpg"
                 alt="Нажмите для увеличения изображения 28.jpg">
 
@@ -799,7 +800,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/29.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/29.jpg"
                 alt="Нажмите для увеличения изображения 29.jpg">
 
@@ -812,7 +813,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/30.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/30.jpg"
                 alt="Нажмите для увеличения изображения 30.jpg">
 
@@ -825,7 +826,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/31.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/31.jpg" alt="img">
               <div class="im_zoom" style="position: absolute; display: none;"></div>
             </a>
@@ -836,7 +837,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/32.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/32.jpg" alt="img">
 
               <div class="im_zoom" style="position: absolute; display: none;"></div>
@@ -848,7 +849,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/33.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/33.jpg" alt="img">
               <div class="im_zoom" style="position: absolute; display: none;"></div>
             </a>
@@ -859,7 +860,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/34.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/34.jpg">
 
               <div class="im_zoom" style="position: absolute; display: none;"></div>
@@ -871,7 +872,7 @@
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/35.jpg" class="sigProLink fancybox-button"
-              rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+              data-fancybox="gallery">
               <img class="sigProImg" src="./images/gallery/potolok/35.jpg" alt="img">
               <div class="im_zoom" style="position: absolute; display: none;"></div>
             </a>
@@ -1255,12 +1256,19 @@
 
   </script>
 
+  
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+<script src="./js/main.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/init.js"></script>
+<script src="./js/scripts.js"></script>
 
-  <script src="./js/main.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
-  <script src="./js/init.js"></script>
-  <script src="./js/scripts.js"></script>
-
+<script>
+  Fancybox.bind('[data-fancybox="gallery"]', {
+    Thumbs: false,
+    width: 900,
+  });
+</script>
 
 </body>
 
