--- a/floor.html
+++ b/floor.html
@@ -15,6 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
   <link href="css/maximenuckmobile.css" rel="stylesheet">
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/temp.css" rel="stylesheet">
@@ -1880,7 +1881,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/pol/1.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/pol/1.jpg" alt="img">
                   <div class="im_zoom" style="position: absolute; display: none;"></div>
                 </a>
@@ -1891,7 +1892,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/pol/2.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/pol/2.jpg" alt="img">
                   <div class="im_zoom" style="position: absolute;"></div>
                 </a>
@@ -1902,7 +1903,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/pol/3.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/pol/3.jpg"
                     alt="Нажмите для увеличения изображения 3.jpg">
 
@@ -2201,12 +2202,17 @@
     });
   </script>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
   <script src="./js/main.js"></script>
   <script src="./js/bootstrap.min.js"></script>
   <script src="./js/init.js"></script>
   <script src="./js/scripts.js"></script>
-
+  <script>
+    Fancybox.bind('[data-fancybox="gallery"]', {
+      Thumbs: false,
+      width: 900,
+    });
+  </script>
 
 </body>
 
