--- a/redevelopment.html
+++ b/redevelopment.html
@@ -15,6 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
   <link href="css/maximenuckmobile.css" rel="stylesheet">
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/temp.css" rel="stylesheet">
@@ -1629,11 +1630,18 @@
   </script>
 
 
-  <script src="./js/main.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+<script src="./js/main.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/init.js"></script>
+<script src="./js/scripts.js"></script>
 
-  <script src="./js/scripts.js"></script>
-
+<script>
+  Fancybox.bind('[data-fancybox="gallery"]', {
+    Thumbs: false,
+    width: 900,
+  });
+</script>
 
 </body>
 
