--- a/window.html
+++ b/window.html
@@ -15,6 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
   <link href="css/maximenuckmobile.css" rel="stylesheet">
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/temp.css" rel="stylesheet">
@@ -2055,8 +2056,8 @@
           <li class="sigProThumb">
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
-                <a href="./images/gallery/okna/1.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                <a href="./images/gallery/okna/1.jpg" class="sigProLink fancybox-button" 
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/okna/1.jpg" alt="img">
                   <div class="im_zoom" style="position: absolute; display: none;"></div>
                 </a>
@@ -2067,7 +2068,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/okna/2.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/okna/2.jpg" alt="img">
                   <div class="im_zoom" style="position: absolute;"></div>
                 </a>
@@ -2078,7 +2079,7 @@
             <span class="sigProLinkOuterWrapper">
               <span class="sigProLinkWrapper">
                 <a href="./images/gallery/okna/3.jpg" class="sigProLink fancybox-button"
-                  rel="fancybox-button[gallerya638e8de0b]" target="_blank">
+                  data-fancybox="gallery">
                   <img class="sigProImg" src="./images/gallery/okna/3.jpg"
                     alt="Нажмите для увеличения изображения 3.jpg">
 
@@ -2119,61 +2120,94 @@
         <tbody>
           <tr>
             <td>
-              <p>Ребята здорово помогли с ремонтом - выставили старые окна во всем доме и поставили новые. Получилось даже дешевле, чем у шабашников, и гораздо чище. Приятно работать с профессионалами. Спасибо!</p>
+              <p>Ребята здорово помогли с ремонтом - выставили старые окна во всем доме и поставили новые. Получилось
+                даже дешевле, чем у шабашников, и гораздо чище. Приятно работать с профессионалами. Спасибо!</p>
             </td>
             <td>
-              <p>Старое окно совсем развалилось - дуло, пропускало шум, даже откосы потрескались. Решили обратиться в Питер Демонтаж за демонтажем перед установкой новых. Мастера молодцы, все быстро, качественно, мы довольны. Спасибо!</p>
+              <p>Старое окно совсем развалилось - дуло, пропускало шум, даже откосы потрескались. Решили обратиться в
+                Питер Демонтаж за демонтажем перед установкой новых. Мастера молодцы, все быстро, качественно, мы
+                довольны. Спасибо!</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p>Прекрасный мастер Владимир. Порядочный, грамотный, аккуратный, опытный, стремящийся сделать все, чтобы клиенту понравилась работа. Все инструменты были при нем, приехал вовремя, сделал все, о чем договаривались (я обращалась к Питер Демонтаж с задачей демонтировать окна в спальне и на кухне). Доделывает все до конца, до мелочей. Стоимость работ ровно та, что заявлена. Горячо рекомендую Владимира как для большого ремонта, так и для самых небольших задач (как мои).</p>
+              <p>Прекрасный мастер Владимир. Порядочный, грамотный, аккуратный, опытный, стремящийся сделать все, чтобы
+                клиенту понравилась работа. Все инструменты были при нем, приехал вовремя, сделал все, о чем
+                договаривались (я обращалась к Питер Демонтаж с задачей демонтировать окна в спальне и на кухне).
+                Доделывает все до конца, до мелочей. Стоимость работ ровно та, что заявлена. Горячо рекомендую Владимира
+                как для большого ремонта, так и для самых небольших задач (как мои).</p>
             </td>
-            <td>Мастер Константин демонтировал окно на балконе. Очень довольна его работой. Он вежливый и по завершении работ осталось приятное впечатление о человеке. Спасибо ему большое. Очень понравился сервис компании Питер Демонтаж. В скором времени будем делать ремонт и обязательно обратимся за помощью в компанию. Оценка мастеру - "пять".</td>
+            <td>Мастер Константин демонтировал окно на балконе. Очень довольна его работой. Он вежливый и по завершении
+              работ осталось приятное впечатление о человеке. Спасибо ему большое. Очень понравился сервис компании
+              Питер Демонтаж. В скором времени будем делать ремонт и обязательно обратимся за помощью в компанию. Оценка
+              мастеру - "пять".</td>
           </tr>
           <tr>
-            <td>Мастер Дмитрий  демонтировал и установил окна ПВХ на балконе. Приехал вовремя, сделал все хорошо, аккуратно. Замечаний нет. Спасибо.&nbsp;</td>
+            <td>Мастер Дмитрий демонтировал и установил окна ПВХ на балконе. Приехал вовремя, сделал все хорошо,
+              аккуратно. Замечаний нет. Спасибо.&nbsp;</td>
             <td>
-              <p>Спасибо специалистам Питер Демонтаж,  правда помогли! Удалили под корень старое окно, убрали за собой весь мусор и вывезли. Я доволен на все 100!</p>
+              <p>Спасибо специалистам Питер Демонтаж, правда помогли! Удалили под корень старое окно, убрали за собой
+                весь мусор и вывезли. Я доволен на все 100!</p>
             </td>
           </tr>
 
           <tr>
             <td>
-              <p>Собственно, Антон был единственным, кто откликнулся мне помочь по демонтажу двери. Хотел выбрать из нескольких предложений, но прочитав, отзывы понял, что больше искать никого не буду. Я не ошибся. Все отзывы даже не отражают, того, что его бригада умеет на самом деле. Для таких мастеров нужно отдельно вводить шкалу оценок. Я бы и 10 поставил, если бы можно было. Четко, пунктуально, качество без нареканий.</p>
+              <p>Собственно, Антон был единственным, кто откликнулся мне помочь по демонтажу двери. Хотел выбрать из
+                нескольких предложений, но прочитав, отзывы понял, что больше искать никого не буду. Я не ошибся. Все
+                отзывы даже не отражают, того, что его бригада умеет на самом деле. Для таких мастеров нужно отдельно
+                вводить шкалу оценок. Я бы и 10 поставил, если бы можно было. Четко, пунктуально, качество без
+                нареканий.</p>
             </td>
             <td>
-              <p>Повторно обратился к мастеру Александру для демонтажа дверей у родителей. В очередной раз мастером выполнена работа высокого класса. Спасибо Питер Демонтаж за прекрасную работу.</p>
+              <p>Повторно обратился к мастеру Александру для демонтажа дверей у родителей. В очередной раз мастером
+                выполнена работа высокого класса. Спасибо Питер Демонтаж за прекрасную работу.</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p>Требовалось демонтировать старые межкомнатные двери и установить новые. Мастер приехал с двумя тележками инструмента, сделал всё, что оговаривали предварительно, после окончания работы собрал весь мусор. Результатом его работы доволен.</p>
+              <p>Требовалось демонтировать старые межкомнатные двери и установить новые. Мастер приехал с двумя
+                тележками инструмента, сделал всё, что оговаривали предварительно, после окончания работы собрал весь
+                мусор. Результатом его работы доволен.</p>
             </td>
-            <td>Мастер Константин выполнил свою работу превосходно! Очень высокий уровень работы! Были проблемы с дверными проемами, так Костя сам всё объяснил и показал как сделать! Всем советую ! Тем более найти мастера с таким опытом работы и высококлассным оборудованием будет очень сложно!</td>
+            <td>Мастер Константин выполнил свою работу превосходно! Очень высокий уровень работы! Были проблемы с
+              дверными проемами, так Костя сам всё объяснил и показал как сделать! Всем советую ! Тем более найти
+              мастера с таким опытом работы и высококлассным оборудованием будет очень сложно!</td>
           </tr>
           <tr>
-            <td>Мастера молодцы, все сделали как надо. Приехали, быстро демонтировали все межкомнатные двери. Аккуратно, к качеству работы претензий у меня нет. Хорошо и быстро! Цена за работу нормальная, меня устроила полностью.</td>
+            <td>Мастера молодцы, все сделали как надо. Приехали, быстро демонтировали все межкомнатные двери. Аккуратно,
+              к качеству работы претензий у меня нет. Хорошо и быстро! Цена за работу нормальная, меня устроила
+              полностью.</td>
             <td>
-              <p>Благодарна мастеру Дмитрию, что так качественно и без проблем сделал мне демонтаж двери из массива дуба. Хорошо все сделал. Не торопился. Сам веселый человек. Спасибо ему за работу!</p>
+              <p>Благодарна мастеру Дмитрию, что так качественно и без проблем сделал мне демонтаж двери из массива
+                дуба. Хорошо все сделал. Не торопился. Сам веселый человек. Спасибо ему за работу!</p>
             </td>
           </tr>
 
           <tr>
             <td>
-              <p>Спасибо Вам еще раз! Очень довольна и качеством, и скоростью проведения демонтажа сантехники. Трубы были очень старые, давно пора поменять было, уже прямо сыпались. Сделали все, что мне было необходимо, без лишних вопросов и долгих разговоров. Спасибо еще раз. Очень рада, что нашла таких замечательных исполнителей. Буду обращаться сама и советовать знакомым компанию Питер Демонтаж</p>
+              <p>Спасибо Вам еще раз! Очень довольна и качеством, и скоростью проведения демонтажа сантехники. Трубы
+                были очень старые, давно пора поменять было, уже прямо сыпались. Сделали все, что мне было необходимо,
+                без лишних вопросов и долгих разговоров. Спасибо еще раз. Очень рада, что нашла таких замечательных
+                исполнителей. Буду обращаться сама и советовать знакомым компанию Питер Демонтаж</p>
             </td>
             <td>
-              <p>Мастер отличный! Приехал вовремя как и договорились. Был вежлив, спокоен, без суеты. Работу сделал чётко и аккуратно. Установил душевую кабину. Я очень доволен его работой!</p>
+              <p>Мастер отличный! Приехал вовремя как и договорились. Был вежлив, спокоен, без суеты. Работу сделал
+                чётко и аккуратно. Установил душевую кабину. Я очень доволен его работой!</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p>Спасибо, Питер Демонтаж. Демонтировали и вывезли ванну. Лифта нет, так что сами сносили ее по этажам. Меня так же приятно удивило, что они потом попросили веник и замели то место где ванная стояла. Классный сервис!</p>
+              <p>Спасибо, Питер Демонтаж. Демонтировали и вывезли ванну. Лифта нет, так что сами сносили ее по этажам.
+                Меня так же приятно удивило, что они потом попросили веник и замели то место где ванная стояла. Классный
+                сервис!</p>
             </td>
-            <td>Нам нужно было заменить электрику по всей квартире, первым этапом заказали демонтаж у инженера Антона. Работы много, думали как всегда затянется сильно. По итогу сделали очень оперативно и доступно по цене, как для 3х комнат, санузла, кухни, коридора. Мы остались довольны, супруга уже порекомендовала знакомым.</td>
+            <td>Нам нужно было заменить электрику по всей квартире, первым этапом заказали демонтаж у инженера Антона.
+              Работы много, думали как всегда затянется сильно. По итогу сделали очень оперативно и доступно по цене,
+              как для 3х комнат, санузла, кухни, коридора. Мы остались довольны, супруга уже порекомендовала знакомым.
+            </td>
           </tr>
-          
+
         </tbody>
       </table>
       <a href="#" class="review_link">Еще реальные отзывы от наших клиентов на Авито</a>
@@ -2405,10 +2439,19 @@
   </script>
 
 
-  <script src="./js/main.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
-  <script src="./js/scripts.js"></script>
-  <script src="./js/init.js"></script>
+  
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+<script src="./js/main.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/init.js"></script>
+<script src="./js/scripts.js"></script>
+
+<script>
+  Fancybox.bind('[data-fancybox="gallery"]', {
+    Thumbs: false,
+    width: 900,
+  });
+</script>
 
 
 </body>
