--- a/index.html
+++ b/index.html
@@ -391,13 +391,13 @@
                               </g>
                             </svg></i></div>
                         <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">Алмазная резка </a>
-                          <a href="#" class="maximenuck_box_item">Усиление </a>
-                          <a href="#" class="maximenuck_box_item">Штробление </a>
+                          <a href="./diamond.html" class="maximenuck_box_item">Алмазная резка </a>
+                          <a href="./diamond.html#usilenie" class="maximenuck_box_item">Усиление </a>
+                          <a href="./diamond.html#shtroblenie" class="maximenuck_box_item">Штробление </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1 "><a class="maximenuck "
-                          href="/steny-pol-potolok.html"><span class="titreck">Алмазное бурение</span></a>
+                          href="./diamond.html#burenie"><span class="titreck">Алмазное бурение</span></a>
                       </li>
                       <li data-level="1" class="maximenuck  level1"><a class="maximenuck "
                           href="./redevelopment.html"><span class="titreck">Перепланировка</span></a>
