--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
                               </g>
                             </svg></i></div>
                         <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">Наш автопарк </a>
-                          <a href="#" class="maximenuck_box_item">Фасовка мусора </a>
-                          <a href="#" class="maximenuck_box_item">Спуск и погрузка мусора </a>
+                          <a href="./garbage.html" class="maximenuck_box_item">Наш автопарк </a>
+                          <a href="./garbage.html#fasovka" class="maximenuck_box_item">Фасовка мусора </a>
+                          <a href="./garbage.html#spusk" class="maximenuck_box_item">Спуск и погрузка мусора </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1">
